2/05/23 casi implementado contar hay errores

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Practica2
 endorsed.classpath=
 excludes=
+file.reference.BaseDatos.jar=librerias\\BaseDatos.jar
 file.reference.Libreriabasica.jar=librerias/Libreriabasica.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.Libreriabasica.jar}
+    ${file.reference.Libreriabasica.jar}:\
+    ${file.reference.BaseDatos.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
